quicklog/tests/failures/expr_without_name_3.stderr
error: unexpected token
 --> tests/failures/expr_without_name_3.rs:9:14
  |
9 |     info!(foo());
  |              ^^
